# mcp-attack-analysis

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  update-deps.py
config/: dp.yaml  fsdp.yaml
data/: attacks.json
data/attacks/test/: data-00000-of-00001.arrow  dataset_info.json  state.json
data/attacks/train/: data-00000-of-00001.arrow  state.json
eval/: parallel.py  rollout.py  single.py
train/: lora_rlvr.py  reward.py  rlvr.py  sft.py  sft_data.py  unsloth_rlvr.py  verl_rlvr.py
utils/: attack.py  llm.py  prompt.py  tool.py  verl_data.py
