[project]
name = "mcp-attack-analysis"
version = "0.1.0"
description = "An evaluation and analysis project for MCP attacks."
authors = [{ name = "ShengRen", email = "rensheng0410@outlook.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepspeed>=0.18.0",
    "flash-attn>=2.8.3",
    "flashinfer-python>=0.3.1.post1",
    "liger-kernel>=0.6.2",
    "litellm>=1.77.7",
    "openai>=2.2.0",
    "python-dotenv>=1.1.1",
    "rich>=13.9.4",
    "swanlab>=0.6.10",
    "trl[peft,vllm]>=0.23.1",
]

[dependency-groups]
dev = ["ipykernel"]
